<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/et_student_id"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:hint="@string/et_login_user_id"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/et_student_name"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:hint="@string/et_login_user_name"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/commBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_login"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>