<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_name"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/tv_friend_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_name"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_student_id"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/tv_friend_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_student_id"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_phone"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tv_phone"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/tv_book"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:gravity="center_vertical"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_books"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/btn_delete_friend"
        style="@style/commBtn"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/str_delete_friend"
        />
</LinearLayout>