<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_fragment_books"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_mine"
            style="@style/commBtn"
            android:background="@drawable/selector_btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/btn_fragment_mine" />

        <Button
            android:id="@+id/btn_market"
            style="@style/commBtn"
            android:background="@drawable/selector_btn2"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_fragment_market" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fragment_mine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_fragment_books"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/srl_fragment_books_mine"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_fragment_books_mine"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fragment_market"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_fragment_books"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_fragment_books_search"
                android:layout_width="0dp"
                android:inputType="number"
                android:layout_height="match_parent"
                android:hint="@string/et_book_id"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_fragment_books_search"
                style="@style/commBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/btn_search"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_fragment_books_market"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>