<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <EditText

            android:id="@+id/et_new_friend_search"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:background="@drawable/shape_et_normal"
            android:hint="@string/et_hint_student_id" />

        <Button
            android:id="@+id/btn_add_new_friend_search"
            style="@style/commBtn"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_new_friend_one"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/tv_new_friend_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:gravity="center_vertical" />

        <Button
            android:id="@+id/btn_add_new_friend_add"
            style="@style/commBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/btn_add" />

    </LinearLayout>
</LinearLayout>